jM - Bean Context Improvement